--- a/game.css
+++ b/game.css
@@ -2,14 +2,24 @@ body {
 	border: solid 2px;
 	width: auto;
 	text-align: center;
-	padding: 5px 0 5px 0;
-	flex-wrap: wrap;
+	padding: 5px;
+	display: flex;
+	flex-direction: column;
+	margin: 0 0 0 0;
 }
 
-.control{
-	flex-direction: row;
-	justify-content: space-between;
+.container {
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
 }
+
+
+.space {
+	width: 50%;
+}
+
+
 
 canvas {
 	border: 1px solid;
