--- a/game.css
+++ b/game.css
@@ -2,30 +2,48 @@ body {
 	border: solid 2px;
 	width: auto;
 	text-align: center;
-	padding: 5px;
+	padding: 0;
 	display: flex;
 	flex-direction: column;
 	margin: 0 0 0 0;
 }
 
-.container {
-	display: flex;
-	justify-content: space-around;
-	align-items: center;
-}
-
-
-.space {
-	width: 50%;
-}
-
-
-
 canvas {
 	border: 1px solid;
+	margin: 0;
 }
 
-button {
-	text-align: center;
-	width: 5em;
+.up {
+	grid-area: up;
+}
+
+.left {
+	grid-area: left;
+}
+
+.right {
+	grid-area:right;
+}
+
+.down {
+	grid-area: down;
+}
+
+.restart {
+	grid-area: center;
+	background-color: green;
+	display: flex;
+	justify-content: center;
+}
+
+.cntl {
+	border: solid;
+	border-radius: 5rem;
+	width: 5rem;
+	height: 5rem;
+	display: grid;
+	grid-template-areas: 
+		"... up ..."
+		"left center right"
+		"... down ...";
 }
