--- a/game.css
+++ b/game.css
@@ -1,16 +1,27 @@
+html, body {
+	height: 100%;
+}
+
 body {
 	border: solid 2px;
 	width: auto;
 	text-align: center;
-	padding: 0;
 	display: flex;
 	flex-direction: column;
-	margin: 0 0 0 0;
+	margin: 0;
 }
 
 canvas {
 	border: 1px solid;
 	margin: 0;
+}
+
+.interact {
+	width: 100%;
+	height: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 
 .up {
@@ -30,20 +41,20 @@ canvas {
 }
 
 .restart {
-	grid-area: center;
-	background-color: green;
-	display: flex;
-	justify-content: center;
+	font-weight: bold;
+	font-size: 2em;
+	color: blue;
+	text-shadow: 2px;
 }
 
-.cntl {
+#cntl {
 	border: solid;
-	border-radius: 5rem;
-	width: 5rem;
-	height: 5rem;
+	border-radius: 8rem;
+	width: 8rem;
+	height: 8rem;
 	display: grid;
 	grid-template-areas: 
 		"... up ..."
-		"left center right"
+		"left restart right"
 		"... down ...";
 }
