added a functining 'start' button, messed up the restart nut I'll fix that later

--- a/game.css
+++ b/game.css
@@ -55,6 +55,6 @@ canvas {
 	display: grid;
 	grid-template-areas: 
 		"... up ..."
-		"left restart right"
+		"left ... right"
 		"... down ...";
 }
