--- a/game.css
+++ b/game.css
@@ -1,24 +1,43 @@
 html, body {
 	height: 100%;
+	width: 100%;
+	padding: 0;
+	margin: 0;
 }
 
 body {
 	border: solid 2px;
-	width: auto;
 	text-align: center;
 	display: flex;
 	flex-direction: column;
-	margin: 0;
+}
+
+.screen {
+	height: 50%;
+	width: 100%;
+	padding: 0 0 0 0;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+}
+
+#canvas {
+	width: 95%;
+	height: 85%;
+	margin: 0 0 0 0;
 }
 
 canvas {
 	border: 1px solid;
+	width: 100%;
+	height: 100%;
 	margin: 0;
 }
 
 .interact {
 	width: 100%;
-	height: 100%;
+	height: 50%;
 	display: flex;
 	justify-content: center;
 	align-items: center;
