--- a/game.css
+++ b/game.css
@@ -12,7 +12,7 @@ body {
 	flex-direction: column;
 }
 
-.screen {
+#screen {
 	height: 50%;
 	width: 100%;
 	padding: 0 0 0 0;
@@ -35,7 +35,7 @@ canvas {
 	margin: 0;
 }
 
-.interact {
+#interact {
 	width: 100%;
 	height: 50%;
 	display: flex;
@@ -76,4 +76,6 @@ canvas {
 		"... up ..."
 		"left ... right"
 		"... down ...";
+	align-items: center;
+	justify-items: center;
 }
