--- a/game.css
+++ b/game.css
@@ -6,6 +6,7 @@ html, body {
 }
 
 body {
+	background-image: linear-gradient(120deg , lightblue, blue);
 	border: solid 2px;
 	text-align: center;
 	display: flex;
@@ -39,7 +40,9 @@ body {
 }
 
 canvas {
-	border: 1px solid;
+	border: 2px solid;
+	border-radius: 3px;
+	background-color: #bcff53;
 	width: 100%;
 	height: 100%;
 	margin: 0;
@@ -82,7 +85,11 @@ canvas {
 }
 
 #cntl {
-	border: solid;
+	border: 1px solid #2aaea7;
+	box-shadow: 3px 3px 6px #1540be;
+	background-color: #5f9fe8b8;
+	color: #4441c9ad;
+	font-size: 1.5rem;
 	border-radius: 8rem;
 	width: 8rem;
 	height: 8rem;
