--- a/game.css
+++ b/game.css
@@ -41,9 +41,10 @@ body {
 
 canvas {
 	border: 2px solid;
-	border-radius: 3px;
+	box-shadow: 1px 1px 10px black;
+	border-radius: 5px;
 	background-color: #bcff53;
-	width: 100%;
+	width: 92%;
 	height: 100%;
 	margin: 0;
 }
@@ -97,7 +98,7 @@ button {
 
 #cntl {
 	border: 1px solid #2aaea7;
-	box-shadow: 3px 3px 6px #1540be;
+	box-shadow: 1px 1px 10px black;
 	background-color: #5f9fe8b8;
 	color: #4441c9ad;
 	font-size: 1.5rem;
