--- a/game.css
+++ b/game.css
@@ -7,7 +7,8 @@ html, body {
 
 body {
 	background-image: linear-gradient(120deg , lightblue, blue);
-	border: solid 2px;
+	border: 5px  solid;
+	box-shadow: 2px 2px 10px black;
 	text-align: center;
 	display: flex;
 	flex-direction: column;
@@ -24,7 +25,7 @@ body {
 }
 
 #title {
-	font-size: 1.2em;
+	font-size: 0.8em;
 	font-family: Courier New;
 	width: 100%;
 	height: 4%;
@@ -40,13 +41,18 @@ body {
 }
 
 canvas {
-	border: 2px solid;
-	box-shadow: 1px 1px 10px black;
-	border-radius: 5px;
-	background-color: #bcff53;
+	background-image: url("back1.jpg");
+	background-repeat: no-repeat;
+	background-position: center;
+	background-size: cover;
+	border: 10px solid;
+	box-shadow: 0px 0px 10px black;
+	border-radius: 3px;
+	background-color: #CDFDFF;
 	width: 92%;
 	height: 100%;
 	margin: 0;
+	
 }
 
 .gameover {
@@ -78,7 +84,7 @@ p {
 	grid-area: left;
 }
 
-#center, #select {
+#center, #select{
 	grid-area: center;
 	border: 2px solid black;
 	box-shadow: 1px 1px 10px;
@@ -107,8 +113,8 @@ button {
 
 #cntl {
 	border: 1px solid #2aaea7;
-	box-shadow: 1px 1px 10px black;
 	background-color: #5f9fe8b8;
+	box-shadow: 1px 1px 10px black;
 	color: #4441c9ad;
 	font-size: 1.5rem;
 	border-radius: 8rem;
@@ -121,4 +127,17 @@ button {
 		"... down ...";
 	align-items: center;
 	justify-items: center;
+}
+
+#cntl:active {
+  width: 8.2rem;
+  height: 8.2rem;
+  box-shadow: 2px 2px 10px black;
+  color: white;
+}
+
+#select, #center:active {
+	width: 2.1em;
+	height: 2.1em;
+	box-shadow: 2px 2px 10px;
 }
