--- a/game.css
+++ b/game.css
@@ -3,6 +3,10 @@ html, body {
 	width: 100%;
 	padding: 0;
 	margin: 0;
+	max-width: 100%;
+    max-height: 100%;
+    overflow: hidden;
+    position: relative;.
 }
 
 body {
@@ -41,10 +45,10 @@ body {
 }
 
 canvas {
-	background-image: url("back5.jpg");
-	background-repeat: no-repeat;
-	background-position: center;
-	background-size: cover;
+	background-image: url("Gem Orange.png"), url("Gem Green.png"), url("back5.jpg");
+	background-position: 5% 5%, 5% 18%, center;
+	background-repeat: no-repeat, no-repeat, no-repeat;
+	background-size: 25px 25px, 25px 25px, cover;
 	border: 10px solid;
 	box-shadow: 0px 0px 10px black;
 	border-radius: 3px;
@@ -126,7 +130,7 @@ button {
 		"left center right"
 		"... down ...";
 	align-items: center;
-	justify-items: center;
+	justify-items: center;    
 }
 
 #cntl:active {
