--- a/game.css
+++ b/game.css
@@ -1,16 +1,15 @@
-html, body {
-	height: 100%;
-	width: 100%;
-	padding: 0;
-	margin: 0;
-	max-width: 100%;
+section#game {
+    width: 480px;
+    height: 800px;
+    max-width: 100%;
     max-height: 100%;
     overflow: hidden;
-    position: relative;.
+    position: relative;
 }
 
 body {
 	background-image: linear-gradient(120deg , lightblue, blue);
+	margin: 0 0 0 0;
 	border: 5px  solid;
 	box-shadow: 2px 2px 10px black;
 	text-align: center;
@@ -18,7 +17,7 @@ body {
 	flex-direction: column;
 }
 
-#screen {
+section#game #screen {
 	height: 48%;
 	width: 100%;
 	padding: 0 0 0 0;
@@ -28,7 +27,7 @@ body {
 	justify-content: center;
 }
 
-#title {
+section#game #title {
 	font-size: 0.8em;
 	font-family: Courier New;
 	width: 100%;
@@ -38,6 +37,20 @@ body {
 	justify-content: center;
 }
 
+h2 {
+	padding-right: 5.3%;
+	padding-left: 3%;
+	text-shadow: 3px 3px 10px black;
+}
+
+section#game #interact {
+	width: 100%;
+	height: 48%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
 #canvas {
 	width: 95%;
 	height: 85%;
@@ -45,10 +58,10 @@ body {
 }
 
 canvas {
-	background-image: url("Gem Orange.png"), url("Gem Green.png"), url("back5.jpg");
-	background-position: 5% 5%, 5% 18%, center;
-	background-repeat: no-repeat, no-repeat, no-repeat;
-	background-size: 25px 25px, 25px 25px, cover;
+	background-image: url(" "), url("Gem Orange.png"), url("Gem Green.png"), url("back5.jpg");
+	background-position: 50% 50%, 5% 5%, 5% 18%, center;
+	background-repeat: no-repeat, no-repeat, no-repeat, no-repeat;
+	background-size: 260px 120px, 25px 25px, 25px 25px, cover;
 	border: 10px solid;
 	box-shadow: 0px 0px 10px black;
 	border-radius: 3px;
@@ -56,12 +69,6 @@ canvas {
 	width: 92%;
 	height: 100%;
 	margin: 0;
-	
-}
-
-.gameover {
-	font-size: 50px;
-	color: red;
 }
 
 h2{
@@ -70,14 +77,6 @@ h2{
 
 p {
 	font-size: 20px;
-}
-
-#interact {
-	width: 100%;
-	height: 48%;
-	display: flex;
-	justify-content: center;
-	align-items: center;
 }
 
 .up {
@@ -90,6 +89,7 @@ p {
 
 #center, #select{
 	grid-area: center;
+	
 	border: 2px solid black;
 	box-shadow: 1px 1px 10px;
 	width: 1.8em;
@@ -105,19 +105,9 @@ p {
 	grid-area: down;
 }
 
-button {
-	font-weight: bold;
-	font-size: 2em;
-	padding: 8px;
-	box-shadow: 3px 3px 8px #1540be;
-	background-color: #0e72e4b8;
-	border-color: #a4a4e6;
-	color: #eddfdf;
-}
-
 #cntl {
-	border: 1px solid #2aaea7;
-	background-color: #5f9fe8b8;
+	border: 1px solid black;
+	background-color: #00017E;
 	box-shadow: 1px 1px 10px black;
 	color: #4441c9ad;
 	font-size: 1.5rem;
