--- a/game.css
+++ b/game.css
@@ -15,10 +15,11 @@ body {
 	text-align: center;
 	display: flex;
 	flex-direction: column;
+	overscroll-behavior-y: contain;
 }
 
 section#game #screen {
-	height: 48%;
+	height: 60%;
 	width: 100%;
 	padding: 0 0 0 0;
 	display: flex;
@@ -45,28 +46,28 @@ h2 {
 
 section#game #interact {
 	width: 100%;
-	height: 48%;
+	height: 36%;
 	display: flex;
 	justify-content: center;
 	align-items: center;
 }
 
 #canvas {
-	width: 95%;
-	height: 85%;
+	width: 100%;
+	height: 95%;
 	margin: 0 0 0 0;
 }
 
 canvas {
-	background-image: url(" "), url("Gem Orange.png"), url("Gem Green.png"), url("back5.jpg");
-	background-position: 50% 50%, 5% 5%, 5% 18%, center;
-	background-repeat: no-repeat, no-repeat, no-repeat, no-repeat;
-	background-size: 260px 120px, 25px 25px, 25px 25px, cover;
-	border: 10px solid;
-	box-shadow: 0px 0px 10px black;
-	border-radius: 3px;
-	background-color: #CDFDFF;
-	width: 92%;
+	background-image: url(" "), url(" "), url("Gem Orange.png"), url("Gem Green.png"), url(" ");
+	background-position: 50% 30%, 50% 50%, 5% 5%, 50% 5%, center;
+	background-repeat: no-repeat, no-repeat, no-repeat, no-repeat, no-repeat;
+	background-size: 150px 320px, 265px 130px, 25px 25px, 25px 25px, cover;
+	border: 1.5px solid;
+	border-left: 5px solid;
+	border-right: 5px solid;
+	background-color: #33FCFF;
+	width: 95%;
 	height: 100%;
 	margin: 0;
 }
@@ -79,11 +80,11 @@ p {
 	font-size: 20px;
 }
 
-.up {
+#up {
 	grid-area: up;
 }
 
-.left {
+#left {
 	grid-area: left;
 }
 
@@ -97,11 +98,11 @@ p {
 	border-radius: 1.8em;
 }
 
-.right {
+#right {
 	grid-area:right;
 }
 
-.down {
+#down {
 	grid-area: down;
 }
 
@@ -134,4 +135,19 @@ p {
 	width: 2.1em;
 	height: 2.1em;
 	box-shadow: 2px 2px 10px;
+}
+
+:-webkit-full-screen {
+  background-image: linear-gradient(120deg , lightblue, blue);
+  padding-top: 5%;
+}
+
+:-ms-fullscreen {
+  background-image: linear-gradient(120deg , lightblue, blue);
+  padding-top: 5%;
+}
+
+:fullscreen {
+  background-image: linear-gradient(120deg , lightblue, blue);
+  padding-top: 5%;
 }
