--- a/game.css
+++ b/game.css
@@ -11,6 +11,8 @@ body {
 	background-image: linear-gradient(120deg , lightblue, blue);
 	margin: 0 0 0 0;
 	border: 5px  solid;
+	max-width: 100%;
+        max-height: 100%;
 	box-shadow: 2px 2px 10px black;
 	text-align: center;
 	display: flex;
