--- a/game.css
+++ b/game.css
@@ -1,3 +1,11 @@
+body, html {
+   max-width: 100%;
+   max-height: 100%;
+   margin: 0 0 0 0;
+   overflow: hidden;
+   position: relative;
+}
+
 section#game {
     width: 480px;
     height: 800px;
