--- a/game.css
+++ b/game.css
@@ -1,11 +1,3 @@
-body, html {
-   max-width: 100%;
-   max-height: 100%;
-   margin: 0 0 0 0;
-   overflow: hidden;
-   position: relative;
-}
-
 section#game {
     width: 480px;
     height: 800px;
@@ -14,6 +6,13 @@ section#game {
     overflow: hidden;
     position: relative;
 }
+
+body, html {
+   width: 100%;
+   height: 100%;
+   margin: 0 0 0 0;
+}
+
 
 body {
 	background-image: linear-gradient(120deg , lightblue, blue);
