--- a/game.css
+++ b/game.css
@@ -1,21 +1,24 @@
-section#game {
-    width: 480px;
-    height: 800px;
-    max-width: 100%;
-    max-height: 100%;
-    overflow: hidden;
-    position: relative;
+body {
+	margin: 0;
+	padding: 0
+	width: 480px;
+        height: 800px;
+	max-width: 100%;
+        max-height: 100%;
+	text-align: center;
+	overscroll-behavior-y: contain;
+	-webkit-user-select: none;
+        -moz-user-select: none;
+        -ms-user-select: none;
+        user-select: none;
 }
 
-body {
-	background-image: linear-gradient(120deg , lightblue, blue);
-	margin: 0 0 0 0;
-	border: 5px  solid;
-	box-shadow: 2px 2px 10px black;
-	text-align: center;
-	display: flex;
-	flex-direction: column;
-	overscroll-behavior-y: contain;
+section#game {
+       background-image: linear-gradient(120deg , lightblue, blue);
+       width: 100%;
+       height: 100%;
+       overflow: hidden;
+       position: relative;
 }
 
 section#game #screen {
