--- a/game.css
+++ b/game.css
@@ -1,9 +1,10 @@
 body {
 	margin: 0;
 	padding: 0
-	
-	width: 100%;
-        height: 100%;
+	width: 480px;
+        height: 800px;
+	max-width: 100%;
+        max-height: 100%;
 	text-align: center;
 	overscroll-behavior-y: contain;
 	-webkit-user-select: none;
