--- a/game.css
+++ b/game.css
@@ -1,10 +1,9 @@
 body {
 	margin: 0;
 	padding: 0
-	width: 480px;
-        height: 800px;
-	max-width: 100%;
-        max-height: 90%;
+	width: 100%;
+        height: 100vh;
+	
 	text-align: center;
 	overscroll-behavior-y: contain;
 	-webkit-user-select: none;
@@ -16,7 +15,7 @@ body {
 section#game {
        background-image: linear-gradient(120deg , lightblue, blue);
        width: 100%;
-       height: 100%;
+       height: 100vh;
        overflow: hidden;
        position: relative;
 }
