--- a/game.css
+++ b/game.css
@@ -1,9 +1,6 @@
 body {
 	margin: 0;
 	padding: 0
-	width: 100%;
-        height: 100vh;
-	
 	text-align: center;
 	overscroll-behavior-y: contain;
 	-webkit-user-select: none;
@@ -14,8 +11,8 @@ body {
 
 section#game {
        background-image: linear-gradient(120deg , lightblue, blue);
-       width: 100%;
-       height: 100vh;
+       min-height: 100%;
+       height: 100%;
        overflow: hidden;
        position: relative;
 }
