--- a/game.css
+++ b/game.css
@@ -1,6 +1,8 @@
 body {
 	margin: 0;
 	padding: 0
+        min-height: 100%;
+        height: 100%;
 	text-align: center;
 	overscroll-behavior-y: contain;
 	-webkit-user-select: none;
@@ -11,7 +13,7 @@ body {
 
 section#game {
        background-image: linear-gradient(120deg , lightblue, blue);
-       min-height: 100%;
+       
        height: 100%;
        overflow: hidden;
        position: relative;
