--- a/game.css
+++ b/game.css
@@ -1,6 +1,7 @@
-body {
+body,html {
 	margin: 0;
-	padding: 0
+	padding: 0;
+        width: 100%;
         min-height: 100%;
         height: 100%;
 	text-align: center;
@@ -13,7 +14,7 @@ body {
 
 section#game {
        background-image: linear-gradient(120deg , lightblue, blue);
-       
+       width: 100%;
        height: 100%;
        overflow: hidden;
        position: relative;
